--- a/index.html
+++ b/index.html
@@ -279,48 +279,48 @@ let videos = [
                     title: "Ep 1",
                     desc: "",
                     link: "https://drive.google.com/file/d/1Qqw7MT67o90d_7BjXvQuUM4zX534WXXu/preview",
-                    thumb: "https://vignette.wikia.nocookie.net/familyguyfanon/images/3/3c/The_Griffin_House.png/revision/latest?cb=20180405011745"
+                    thumb: "https://i.ytimg.com/vi/h2_tGns93Wk/maxresdefault.jpg"
                 },
                 {
                     title: "Ep 2",
                     desc: "",
                     link: "https://drive.google.com/file/d/1kiXqrnbmrjCM1vkSeEgT1L9hlZLWknhP/preview",
-                    thumb: "https://vignette.wikia.nocookie.net/familyguyfanon/images/3/3c/The_Griffin_House.png/revision/latest?cb=20180405011745"
+                    thumb: "https://i.ytimg.com/vi/h2_tGns93Wk/maxresdefault.jpg"
                 },
                 {
                     title: "Ep 3",
                     desc: "",
                     link: "https://drive.google.com/file/d/1hz0kEIZBvlS-09DeUScS7ac1CHWCWCIN/preview",
-                    thumb: "https://vignette.wikia.nocookie.net/familyguyfanon/images/3/3c/The_Griffin_House.png/revision/latest?cb=20180405011745"
+                    thumb: "https://i.ytimg.com/vi/h2_tGns93Wk/maxresdefault.jpg"
                 },
                 {
                     title: "Ep 4",
                     desc: "",
                     link: "https://drive.google.com/file/d/1KDEs6dMfG-uXi3f7IjdcPr9FZWNStg_o/preview",
-                    thumb: "https://vignette.wikia.nocookie.net/familyguyfanon/images/3/3c/The_Griffin_House.png/revision/latest?cb=20180405011745"
+                    thumb: "https://i.ytimg.com/vi/h2_tGns93Wk/maxresdefault.jpg"
                 },
                 {
                     title: "Ep 5",
                     desc: "",
                     link: "https://drive.google.com/file/d/1BytXCN_2AmyVln6a3d51pqobEuGEMf-n/preview",
-                    thumb: "https://vignette.wikia.nocookie.net/familyguyfanon/images/3/3c/The_Griffin_House.png/revision/latest?cb=20180405011745"
+                    thumb: "https://i.ytimg.com/vi/h2_tGns93Wk/maxresdefault.jpg"
                 },
                 {
                     title: "Ep 6",
                     desc: "",
                     link: "https://drive.google.com/file/d/19GbMaUQCF7YKBp5qE-JxVoJtySd2JsTk/preview",
-                    thumb: "https://vignette.wikia.nocookie.net/familyguyfanon/images/3/3c/The_Griffin_House.png/revision/latest?cb=20180405011745"
+                    thumb: "https://i.ytimg.com/vi/h2_tGns93Wk/maxresdefault.jpg"
                 },
                 {
                     title: "Ep 7",
                     desc: "",
                     link: "https://drive.google.com/file/d/1BTNhVM29_xpRZ3TJ-pGjyjByEk0JO15g/preview",
-                    thumb: "https://vignette.wikia.nocookie.net/familyguyfanon/images/3/3c/The_Griffin_House.png/revision/latest?cb=20180405011745"
+                    thumb: "https://i.ytimg.com/vi/h2_tGns93Wk/maxresdefault.jpg"
                 }
             ]
         },
         {
-            name: "My Little Pony",
+            name: "My Little Pony (watch ts and ur a gooner fr)",
             videos: [
                 {
                     title: "Ep 1",
@@ -485,4 +485,5 @@ renderList();
 </script>
 </body>
 </html>
+
 
