--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ header h1 {
 <body>
 
 <header>
-    <h1>Piratetube🏴‍☠️</h1>
+    <h1>Lizallakes Theater</h1>
 
 <div>
 <input id="search" placeholder="Search videos..." />
@@ -485,5 +485,6 @@ renderList();
 </script>
 </body>
 </html>
+
 
 
